[gd_scene load_steps=4 format=3 uid="uid://bi5r7j4x5lrdk"]

[ext_resource type="Script" path="res://scripts/ui/CharacterCreation.gd" id="1_4y6kl"]
[ext_resource type="Texture2D" path="res://assets/ui/wireframe/App Background.png" id="2_background"]
[ext_resource type="Texture2D" path="res://assets/ui/wireframe/shadedLight00.png" id="3_panel"]

[node name="CharacterCreation" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_4y6kl")

[node name="Background" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource("2_background")
mouse_filter = 2

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -450.0
offset_top = -350.0
offset_right = 450.0
offset_bottom = 350.0

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Title" type="Label" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "üèõÔ∏è Legacy of Divinity - Character Creation üèõÔ∏è"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="LeftPanel" type="VBoxContainer" parent="ScrollContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
custom_constants/separation = 15

[node name="LeftPanelBG" type="NinePatchRect" parent="ScrollContainer/VBoxContainer/HBoxContainer/LeftPanel"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("3_panel")

[node name="BasicInfo" type="VBoxContainer" parent="ScrollContainer/VBoxContainer/HBoxContainer/LeftPanel"]
layout_mode = 2
custom_constants/separation = 10

[node name="BasicInfoBG" type="NinePatchRect" parent="ScrollContainer/VBoxContainer/HBoxContainer/LeftPanel/BasicInfo"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("3_panel")

[node name="BasicInfoTitle" type="Label" parent="ScrollContainer/VBoxContainer/HBoxContainer/LeftPanel/BasicInfo"]
layout_mode = 2
text = "üìù Basic Information"
theme_type_variation = &"HeaderLarge"

[node name="BasicInfoContainer" type="VBoxContainer" parent="ScrollContainer/VBoxContainer/HBoxContainer/LeftPanel/BasicInfo"]
layout_mode = 2

[node name="NameLabel" type="Label" parent="ScrollContainer/VBoxContainer/HBoxContainer/LeftPanel/BasicInfo/BasicInfoContainer"]
layout_mode = 2
text = "Character Name:"

[node name="NameInput" type="LineEdit" parent="ScrollContainer/VBoxContainer/HBoxContainer/LeftPanel/BasicInfo/BasicInfoContainer"]
layout_mode = 2
placeholder_text = "Enter your biblical name..."

[node name="ClassLabel" type="Label" parent="ScrollContainer/VBoxContainer/HBoxContainer/LeftPanel/BasicInfo/BasicInfoContainer"]
layout_mode = 2
text = "Choose your divine calling:"

[node name="ClassOption" type="OptionButton" parent="ScrollContainer/VBoxContainer/HBoxContainer/LeftPanel/BasicInfo/BasicInfoContainer"]
layout_mode = 2

[node name="BackgroundLabel" type="Label" parent="ScrollContainer/VBoxContainer/HBoxContainer/LeftPanel/BasicInfo/BasicInfoContainer"]
layout_mode = 2
text = "Choose your origin story:"

[node name="BackgroundOption" type="OptionButton" parent="ScrollContainer/VBoxContainer/HBoxContainer/LeftPanel/BasicInfo/BasicInfoContainer"]
layout_mode = 2

[node name="HSeparator1" type="HSeparator" parent="ScrollContainer/VBoxContainer/HBoxContainer/LeftPanel"]
layout_mode = 2

[node name="Appearance" type="VBoxContainer" parent="ScrollContainer/VBoxContainer/HBoxContainer/LeftPanel"]
layout_mode = 2
custom_constants/separation = 10

[node name="AppearanceBG" type="NinePatchRect" parent="ScrollContainer/VBoxContainer/HBoxContainer/LeftPanel/Appearance"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("3_panel")

[node name="AppearanceTitle" type="Label" parent="ScrollContainer/VBoxContainer/HBoxContainer/LeftPanel/Appearance"]
layout_mode = 2
text = "üë§ Appearance"
theme_type_variation = &"HeaderLarge"

[node name="AppearanceContainer" type="VBoxContainer" parent="ScrollContainer/VBoxContainer/HBoxContainer/LeftPanel/Appearance"]
layout_mode = 2

[node name="GenderLabel" type="Label" parent="ScrollContainer/VBoxContainer/HBoxContainer/LeftPanel/Appearance/AppearanceContainer"]
layout_mode = 2
text = "Gender:"

[node name="GenderOption" type="OptionButton" parent="ScrollContainer/VBoxContainer/HBoxContainer/LeftPanel/Appearance/AppearanceContainer"]
layout_mode = 2

[node name="AgeLabel" type="Label" parent="ScrollContainer/VBoxContainer/HBoxContainer/LeftPanel/Appearance/AppearanceContainer"]
layout_mode = 2
text = "Age Group:"

[node name="AgeOption" type="OptionButton" parent="ScrollContainer/VBoxContainer/HBoxContainer/LeftPanel/Appearance/AppearanceContainer"]
layout_mode = 2

[node name="HairLabel" type="Label" parent="ScrollContainer/VBoxContainer/HBoxContainer/LeftPanel/Appearance/AppearanceContainer"]
layout_mode = 2
text = "Hair Color:"

[node name="HairOption" type="OptionButton" parent="ScrollContainer/VBoxContainer/HBoxContainer/LeftPanel/Appearance/AppearanceContainer"]
layout_mode = 2

[node name="EyeLabel" type="Label" parent="ScrollContainer/VBoxContainer/HBoxContainer/LeftPanel/Appearance/AppearanceContainer"]
layout_mode = 2
text = "Eye Color:"

[node name="EyeOption" type="OptionButton" parent="ScrollContainer/VBoxContainer/HBoxContainer/LeftPanel/Appearance/AppearanceContainer"]
layout_mode = 2

[node name="RightPanel" type="VBoxContainer" parent="ScrollContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
custom_constants/separation = 15

[node name="RightPanelBG" type="NinePatchRect" parent="ScrollContainer/VBoxContainer/HBoxContainer/RightPanel"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("3_panel")

[node name="Description" type="VBoxContainer" parent="ScrollContainer/VBoxContainer/HBoxContainer/RightPanel"]
layout_mode = 2
size_flags_vertical = 3
custom_constants/separation = 10

[node name="DescriptionBG" type="NinePatchRect" parent="ScrollContainer/VBoxContainer/HBoxContainer/RightPanel/Description"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("3_panel")

[node name="DescriptionTitle" type="Label" parent="ScrollContainer/VBoxContainer/HBoxContainer/RightPanel/Description"]
layout_mode = 2
text = "üìú Character Details"
theme_type_variation = &"HeaderLarge"

[node name="DescriptionLabel" type="RichTextLabel" parent="ScrollContainer/VBoxContainer/HBoxContainer/RightPanel/Description"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "Choose your calling and background to shape your character's destiny in the biblical world."
fit_content = true

[node name="Stats" type="VBoxContainer" parent="ScrollContainer/VBoxContainer/HBoxContainer/RightPanel"]
layout_mode = 2
custom_constants/separation = 10

[node name="StatsBG" type="NinePatchRect" parent="ScrollContainer/VBoxContainer/HBoxContainer/RightPanel/Stats"]
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("3_panel")

[node name="StatsTitle" type="Label" parent="ScrollContainer/VBoxContainer/HBoxContainer/RightPanel/Stats"]
layout_mode = 2
text = "‚ö° Starting Stats Preview"
theme_type_variation = &"HeaderLarge"

[node name="StatsContainer" type="VBoxContainer" parent="ScrollContainer/VBoxContainer/HBoxContainer/RightPanel/Stats"]
layout_mode = 2

[node name="HealthStat" type="Label" parent="ScrollContainer/VBoxContainer/HBoxContainer/RightPanel/Stats/StatsContainer"]
layout_mode = 2
text = "‚ù§Ô∏è Health: 100"

[node name="FaithStat" type="Label" parent="ScrollContainer/VBoxContainer/HBoxContainer/RightPanel/Stats/StatsContainer"]
layout_mode = 2
text = "‚ú® Faith: 0"

[node name="WisdomStat" type="Label" parent="ScrollContainer/VBoxContainer/HBoxContainer/RightPanel/Stats/StatsContainer"]
layout_mode = 2
text = "üß† Wisdom: 0"

[node name="SocialStat" type="Label" parent="ScrollContainer/VBoxContainer/HBoxContainer/RightPanel/Stats/StatsContainer"]
layout_mode = 2
text = "üó£Ô∏è Social: 0"

[node name="AlignmentStat" type="Label" parent="ScrollContainer/VBoxContainer/HBoxContainer/RightPanel/Stats/StatsContainer"]
layout_mode = 2
text = "‚öñÔ∏è Moral Alignment: Neutral"

[node name="HSeparator2" type="HSeparator" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="ButtonBG" type="NinePatchRect" parent="ScrollContainer/VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource("3_panel")

[node name="BackButton" type="Button" parent="ScrollContainer/VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "‚¨ÖÔ∏è Back to Menu"

[node name="RandomButton" type="Button" parent="ScrollContainer/VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "üé≤ Random Character"

[node name="CreateButton" type="Button" parent="ScrollContainer/VBoxContainer/ButtonContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "‚ú® Begin Your Journey"

[connection signal="pressed" from="ScrollContainer/VBoxContainer/ButtonContainer/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/ButtonContainer/RandomButton" to="." method="_on_random_button_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/ButtonContainer/CreateButton" to="." method="_on_create_button_pressed"]